--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "openIMIS",
-  "name": "openIMIS",
+  "short_name": "Kaaraange",
+  "name": "Kaaraange",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "images.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
