--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  ci:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -22,19 +22,32 @@ jobs:
         with:
           node-version: "16"
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: cache # use this to check for `cache-hit` (`steps.cache.outputs.cache-hit != 'true'`)
+        with:
+          path: |
+            **/node_modules
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Check package.json
-        run: npm run check-package
+        run: yarn check-package
 
       # Runs a single command using the runners shell
       - name: Prepare openIMIS Dependencies
-        run: npm run load-config
+        run: yarn load-config
 
       - name: Install dependencies
-        run: npm install # Since we edit package.json with the openIMIS deps, we cannot use --frozen-lockfile
+        run: yarn install # Since we edit package.json with the openIMIS deps, we cannot use --frozen-lockfile
 
       - name: Build
-        run: npm run build
+        run: yarn build
 
       - uses: actions/upload-artifact@v2
         with:
