--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "dependencies": {
     "@date-io/core": "^1.3.13",
     "@date-io/moment": "^1.3.13",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.2.10",
+    "@mui/material": "^5.13.3",
+    "axios": "^1.4.0",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "lodash": "^4.17.15",
@@ -27,7 +31,22 @@
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1",
     "redux-thunk": "^2.3.0",
-    "shelljs": "^0.8.4"
+    "shelljs": "^0.8.4",
+    "@openimis/fe-core": "=1.5.0",
+    "@openimis/fe-home": "=1.5.0",
+    "@openimis/fe-location": "=1.4.0",
+    "@openimis/fe-insuree": "=1.5.0",
+    "@openimis/fe-medical": "=1.5.0",
+    "@openimis/fe-admin": "=1.4.1",
+    "@openimis/fe-tools": "=1.5.0",
+    "@openimis/fe-profile": "=1.5.0",
+    "@openimis/fe-cash_transfer_terminology": ">=1.4.1",
+    "@openimis/fe-dia_form": ">=1.4.1",
+    "@openimis/fe-exporter": ">=1.4.1",
+    "@openimis/fe-grievance": ">=1.4.1",
+    "@openimis/fe-payroll": ">=1.4.1",
+    "@openimis/fe-programs": ">=1.4.1",
+    "@openimis/fe-service_provider": ">=1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
