--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Kaaraange",
   "icons": [
     {
-      "src": "images.png",
+      "src": "image.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
