--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.2.10",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.13.3",
     "axios": "^1.4.0",
     "classnames": "^2.2.6",
